5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1771_672.log
== TEST (2019-05-30 17:00:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
form numpy import *
v1 = ones(6, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 2
    form numpy import *
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:00:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:00:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(6, dtype=int)
print(v1)
-- EXECUTION TIME:
0.4823
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:01:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(input("digite a quantidade: ")), dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    v1 = ones(input()), dtype=int)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:01:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(input("digite a quantidade: ")), dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    v1 = ones(input()), dtype=int)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:01:59) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(input("digite a quantidade: "), dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:02:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(input("digite a quantidade: " , dtype=int))
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:02:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(input("digite a quantidade: "), dtype=int))
print(v1)
-- ERROR:
File "XXXX", line 3
    v1 = ones(input(), dtype=int))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:02:52) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(input("digite a quantidade: "), dtype=int))
print(v1)
-- ERROR:
File "XXXX", line 3
    v1 = ones(input(), dtype=int))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:02:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(input("digite a quantidade: "), dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:03:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(,input("digite a quantidade: "), dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    v1 = ones(,input(), dtype=int)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:03:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
